--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ input:focus{
 }
 
 #register-container{
-    width: 900px;
+    max-width: 900px;
     min-height: 80vh;
     margin: 2rem auto;
     display: flex;
@@ -35,6 +35,7 @@ input:focus{
     background-size: cover;
     background-position: center;
     width: 50%;
+
 }
 
 #banner-layer{
@@ -57,7 +58,7 @@ input:focus{
 }
 
 #register-form h2 {
-    color: rgb(103, 102, 102);
+    color: #676666;
     text-align: center;
     margin-bottom: 1rem;
     font-size: 2.2rem;
@@ -79,6 +80,7 @@ input:focus{
 .form-control label {
     font-weight: bold;
     margin-bottom: .6rem;
+    color: #676666;
 }
 
 .form-control input {
